--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome books</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="java.js" defer></script>
 </head>
 <body>
-  <div>
-    <nav class="awesomes">
-      <h2 class="logos">Awesome Books</h2>
-    </nav>
-  </div>
+  
+  <h1>Awesome Books</h1>
+  <table class="tables">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th></th>
+      </tr>
+    </thead> <br>
+    <tbody class="list-books" id="bookli"></tbody>
+  </table>
+  <form id="bookform" class="book-form">
+    <div class="forms">
+      <input type="text" placeholder="Title" id="title" class="title-input" required>
+    </div>
+    <div class="forms">
+      <input type="text" placeholder="Author" id="author" class="author-input" required>
+    </div>
+    <div class="forms">
+      <input type="submit" value="Add"  class="button-submit">
+    </div>
+  </form>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
