--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
   <link rel="stylesheet" href="style.css">
   <script src="java.js" defer></script>
 </head>
-<body>
-
+<body class="mm">
   <h1>Awesome Books</h1>
   <table class="tables">
-    <thead>
+    <!--<thead>
       <tr>
         <th>Title</th>
         <th>Author</th>
         <th></th>
       </tr>
-    </thead> <br>
-    <tbody class="list-books" id="bookli"></tbody>
+    </thead> <br>-->
+    <tbody id="bookli"></tbody>
   </table>
+  <hr>
   <form id="bookform" class="book-form">
-    <div class="forms">
-      <input type="text" placeholder="Title" id="title" class="title-input" required>
+    <h3 class="titlemain txt-center">Add a new book</h3>
+      <div class="forms mbb">
+        <input type="text" placeholder="Title" id="title" class="title-input" required>
     </div>
+
     <div class="forms">
       <input type="text" placeholder="Author" id="author" class="author-input" required>
     </div>
+
     <div class="forms">
       <input type="submit" value="Add"  class="button-submit">
     </div>
+    
+    
   </form>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
