--- a/index.html
+++ b/index.html
@@ -9,32 +9,62 @@
   <link rel="stylesheet" href="style.css">
   <script src="java.js" defer></script>
 </head>
-<body class="mm">
-  <h1>Awesome Books</h1>
-  <table class="tables">
-    <!--<thead>
-      <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th></th>
-      </tr>
-    </thead> <br>-->
-    <tbody id="bookli"></tbody>
-  </table>
-  <hr>
-  <form id="bookform" class="book-form">
-    <h3 class="titlemain txt-center">Add a new book</h3>
-    <div class="forms mbb">
-      <input type="text" placeholder="Title" id="title" class="title-input" required>
-    </div>
-    <div class="forms">
-      <input type="text" placeholder="Author" id="author" class="author-input" required>
-    </div>
-    <div class="forms">
-      <input type="submit" value="Add"  class="button-submit">
-    </div>
-  </form>
+<body>
+  <header>
+    <nav class="navagation">
+      <p>Awesome Books</p>
+      <ul class="nav">
+        <li>
+          <a href="#lists" id="list">List</a>
+        </li>
+        <li>
+          <a href="#adds" id="addme">Add new</a>
+        </li>
+        <li>
+          <a href="#contacts" id="contactok">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <p class="date" id="dates"></p>
+  </header>
+  <main>
+    <section class="all-list" id="listm">
+      <h2 class="text-center mb-2">All awesome Books</h2>
+      <table class="tables">
+        <tbody id="bookli"></tbody>
+      </table>
+    </section>
 
+    <section class="added col-6 text-center" id="addedok">
+      <form id="bookform" class="book-form">
+        <h3 class="titlemain txt-center">Add a new book</h3>
+        <div class="forms mb-2">
+          <input type="text" placeholder="Title" id="title" class="title-input" required>
+        </div>
+        <div class="forms">
+          <input type="text" placeholder="Author" id="author" class="author-input" required>
+        </div>
+        <div class="forms">
+          <input type="submit" value="Add"  class="mt-2 float-end btn-submit btn btn-success">
+        </div>
+      </form>
+    </section>
+
+    <section id="contact" class="contacts">
+      <h1 class="heading-info">Contact Information</h1>
+      <p id="info">Do you have any questions or you just want to say "Hello"? <br> You can reach out to us!</p>
+      <ul id="colm" class="colm">
+        <li id="infos">our email: beleyaha@gmail.com</li>
+        <li id="infos">our phone number: +251962254748</li>
+        <li id="infos">our address: Addis Ababa, Ethiopia</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright</p>   
+    <p>...</p>
+  </footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
