--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           Contact us
         </p>
         <ul class="for">
-          <li>Email: <span>mail@mail.com</span></li>
+          <li>Email: <span>beleyaha@mail.com</span></li>
           <li>Number: <span>0089288377229</span></li>
           <li>Address: <span>Street name 22, 899849 City, Country </span></li>
         </ul>
