--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <form id="bookform" class="book-form">
       <h3 class="titlemain txt-center">Add a new book</h3>
       <div class="forms mbb">
-        <input type="text" placeholder="Title" id="title" class="title-input" required>
+        <input type="text" placeholder="Title" id="title" class="title-input fus" required>
       </div>
       <div class="forms">
-        <input type="text" placeholder="Author" id="author" class="author-input" required>
+        <input type="text" placeholder="Author" id="author" class="author-input fus" required>
       </div>
       <div class="forms">
         <input type="submit" value="Add"  class="button-submit">
